<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:background="#FF0400"
        tools:ignore="UselessParent">



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="580dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="5dp"
            tools:ignore="MissingClass">





            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:layout_marginStart="120dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_account"/>


            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="200dp"
                android:layout_marginEnd="10dp"
                android:text="@string/accholdername"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/display_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:layout_marginTop="200dp"
                android:layout_marginEnd="10dp"
                android:text="@string/u_name"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="240dp"
                android:layout_marginEnd="10dp"
                android:text="@string/accholderbirth_date"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/display_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:layout_marginTop="240dp"
                android:layout_marginEnd="10dp"
                android:text="@string/u_age"
                android:textColor="@color/black"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/education"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="290dp"
                android:layout_marginEnd="10dp"
                android:text="@string/education"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/display_education"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:layout_marginTop="290dp"
                android:layout_marginEnd="10dp"
                android:text="@string/u_edu"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/jobtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="340dp"
                android:layout_marginEnd="10dp"
                android:text="@string/job_titel"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/display_jobtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:layout_marginTop="340dp"
                android:layout_marginEnd="10dp"
                android:text="@string/u_job"
                android:textColor="@color/black"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/Company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="390dp"
                android:layout_marginEnd="10dp"
                android:text="@string/accholdercompany"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/display_Company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:layout_marginTop="390dp"
                android:layout_marginEnd="10dp"
                android:text="@string/u_company"
                android:textColor="@color/black"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="440dp"
                android:layout_marginEnd="10dp"
                android:text="@string/accholderaddress"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/display_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:layout_marginTop="440dp"
                android:layout_marginEnd="10dp"
                android:text="@string/u_add"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="480dp"
                android:contentDescription="@string/todo"
                android:minHeight="48dp"
                app:srcCompat="@drawable/ic_like"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="480dp"
                android:contentDescription="@string/todo"
                android:minHeight="48dp"
                app:srcCompat="@drawable/ic_comment" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="280dp"
                android:layout_marginTop="480dp"
                android:contentDescription="@string/todo"
                android:minHeight="48dp"
                app:srcCompat="@drawable/ic_clear" />




        </androidx.cardview.widget.CardView>



    </RelativeLayout>

</RelativeLayout>