<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile"
    android:background="@drawable/bg2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:id="@id/top"
        android:background="@color/colorPrimary">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/ic_account_circle_white"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/todo"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marathi_matrimony"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginStart="50dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/ic_chat_black_24dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/todo"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000"
        android:layout_below="@id/top"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="647dp"
        android:layout_below="@+id/top">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="145dp"
            android:layout_height="126dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            app:srcCompat="@drawable/p3"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="487dp"
            android:layout_below="@+id/imageView2">

            <TextView
                android:id="@+id/count1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/_15"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="33dp"
                android:text="@string/post"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/count2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="10dp"
                android:text="@string/_23"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="33dp"
                android:text="@string/like"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>


            <TextView
                android:id="@+id/count3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="300dp"
                android:layout_marginTop="10dp"
                android:text="@string/_8"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="260dp"
                android:layout_marginTop="33dp"
                android:text="@string/interested"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>


            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="10dp"
                android:text="@string/edit_profile"
                android:textColor="@color/black"
                />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="220dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="10dp"
                android:text="@string/save"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="130dp"
                android:text="@string/gallery"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>


            <GridView
                android:id="@+id/mygrid"
                android:layout_width="wrap_content"
                android:layout_height="350dp"
                android:layout_below="@+id/textView9"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="0dp"
                android:columnWidth="100dp"
                android:horizontalSpacing="20dp"
                android:numColumns="auto_fit"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:stretchMode="columnWidth"
                android:verticalSpacing="10dp" />
        </RelativeLayout>


        <!--        <LinearLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:orientation="vertical"-->
        <!--            android:layout_below="@+id/textView9">-->

        <!--        <ScrollView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            tools:ignore="UselessParent">-->


    </RelativeLayout>
        <!--            <GridView-->
        <!--                android:id="@+id/mygrid"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="match_parent"-->
        <!--                android:background="@color/colorPrimaryDark"-->
        <!--                android:columnWidth="100dp"-->
        <!--                android:horizontalSpacing="10dp"-->
        <!--                android:numColumns="auto_fit"-->
        <!--                android:stretchMode="columnWidth"-->
        <!--                android:verticalSpacing="10dp"-->
        <!--                tools:ignore="NestedScrolling,ScrollViewSize" />-->


        <!--        </ScrollView>-->
        <!--        </LinearLayout>-->



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/colorPrimary"
        app:itemHorizontalTranslationEnabled="false"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation" >

    </com.google.android.material.bottomnavigation.BottomNavigationView>






</RelativeLayout>