<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/bg2">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="94dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/register1" />
        <LinearLayout
            android:id="@+id/ltxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15sp"
            android:layout_below="@+id/imageView">

    <TextView
        android:id="@+id/textregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="50dp"
        android:text="@string/heading_register"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/black"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="534dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
       <LinearLayout
        android:id="@+id/R_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/todo"
            android:layout_marginTop="5dp"
            app:srcCompat="@drawable/ic_create"
            app:tint="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

        <EditText
            android:id="@+id/rUserName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp" />
            </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px" />



    <LinearLayout
        android:id="@+id/R_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/todo"
            android:layout_marginTop="5dp"
            app:srcCompat="@drawable/ic_email"
            app:tint="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical"
            android:orientation="vertical">
        <EditText
            android:id="@+id/rUserEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/enter_your_emailid"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px" />



    <LinearLayout
        android:id="@+id/R_cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/todo"
            android:layout_marginTop="5dp"
            app:srcCompat="@drawable/ic_phone"
            app:tint="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical"
            android:orientation="vertical">
    <EditText
        android:id="@+id/rUserPhone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/enter_mobile_no"
        android:inputType="phone"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px" />

    <LinearLayout
        android:id="@+id/R_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/todo"
            android:layout_marginTop="5dp"
            app:srcCompat="@drawable/ic_password"
            app:tint="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <EditText
            android:id="@+id/rPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px" />


    <LinearLayout
        android:id="@+id/R_cpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/todo"
            android:layout_marginTop="5dp"
            app:srcCompat="@drawable/ic_password"
            app:tint="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical"
            android:orientation="vertical">
    <EditText
        android:id="@+id/rConfirmPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/confrim_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px" />

    <LinearLayout
        android:id="@+id/R_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">


                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/todo"
                    android:layout_marginTop="5dp"
                    app:srcCompat="@drawable/ic_wc_black_24dp"
                    app:tint="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">
                    <TextView
                    android:id="@+id/userGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:padding="10dp"/>

                    <RadioGroup
                        android:id="@+id/rUserGender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">



                            <RadioButton
                                android:id="@+id/rUserMale"
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="60dp"
                                android:layout_marginEnd="100dp"
                                android:text="@string/male"
                                android:textColor="@color/black"
                                />


                        <RadioButton
                            android:id="@+id/rUserFemale"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="60dp"
                            android:layout_marginEnd="100dp"
                            android:text="@string/female"
                            android:textColor="@color/black"
                            />
                    </RadioGroup>
                </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
    <Button
        android:id="@+id/signupbtn"
        android:layout_width="112dp"
        android:layout_height="43dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="120dp"
        android:padding="3dp"
        android:text="@string/register"
        android:textSize="16sp"
        android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px" />


    <TextView
        android:id="@+id/tvSigIn"
        android:layout_width="193dp"
        android:layout_height="61dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/existin_account"
        android:textSize="16sp"
        android:layout_marginBottom="100dp"
        android:textColor="@color/black"/>
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>


</LinearLayout>